<resources>

    <string name="app_name_uppercase">PowerTag</string>
    <string name="app_launch_failed">程序启动失败</string>
    <string name="location">地址</string>
    <string name="clock">时钟</string>
    <string name="null_format">--</string>

    <string name="ui_ok">确定</string>
    <string name="ui_cancel">取消</string>

    <string name="format_power">%s千瓦时</string>
    <string name="format_weather_today">今天 %1$d°/%2$d°</string>
    <string name="format_weather_tmp">%d°</string>
    <string name="format_weather_min_max">%1$d°/%2$d°</string>

    <string name="label_module_measure">测量回路</string>
    <string name="label_module_control">控制回路</string>
    <string name="label_module_monitor">监测回路</string>
    <string name="label_monitor_status">状态监测</string>
    <string name="label_monitor_error">故障监测</string>
    <string name="events">事件记录</string>
    <string name="events_filter_other">其他</string>
    <string name="settings_signout">登出</string>
    <string name="settings_demo">演示设置</string>
    <string name="power_load_percent">当前用电负荷%</string>
    <string name="power_load_status_ok">正常</string>
    <string name="power_load_status_alert">预警</string>
    <string name="power_consume_total">当月累计电能</string>
    <string name="power_history_data">用电趋势图（当前回路）</string>
    <string name="power_last_30_days">最近30天用电趋势</string>
    <string name="power_last_15_days">总回路最近15天用电趋势</string>
    <string name="power_chart_hour">总回路分时能耗图</string>
    <string name="power_suggest">节能建议</string>
    <string name="weather_aqi">空气污染指数</string>
    <string name="weather_aqi_none">无</string>
    <string name="weather_today">今天</string>
    <string name="weather_tomorrow">明天</string>
    <string name="weather_after_tomorrow">后天</string>
    <string name="settings_signin">登入</string>
    <string name="demo_mode"><u>演示版本</u></string>
    <string name="module_status">状态</string>
    <string name="module_status_normal">正常</string>
    <string name="module_status_alarm">预警</string>
    <string name="module_status_error">故障</string>
    <string name="module_main">总电源</string>
    <string name="confirm_exit_app">再按一次退出PowerTag</string>

    <string name="notify_alarm">%1$s负载过高</string>
    <string name="notify_error">%1$s发生故障</string>
    <string name="notify_description">请及时检查相关设备</string>

    <!--首页-->
    <string name="group_all">全部</string>
    <string name="group_first_floor">一楼</string>
    <string name="group_second_floor">二楼</string>
    <string name="group_third_floor">三楼</string>

    <!--演示设置-->
    <string name="demo_main_module">总回路</string>
    <string name="demo_freezer_module">冰箱回路</string>
    <string name="demo_oven_module">插座回路</string>
    <string name="demo_setting_success">设置成功</string>

    <!--菜单-->
    <string name="menu_main">施耐德电气终端配电智能化系统</string>
    <string name="menu_events">事件记录</string>
    <string name="menu_settings">设置</string>

    <!--设置-->
    <array name="settings">
        <item>我的账户</item>
        <item>我的设备</item>
        <item>给于反馈</item>
        <item>条款及条件</item>
        <item>关于</item>
    </array>

    <array name="settings_image">
        <item>settings_account</item>
        <item>settings_my_equipment</item>
        <item>settings_feedback</item>
        <item>settings_terms</item>
        <item>settings_about</item>
    </array>

    <!--请示失败-->
    <string name="request_data_error">暂时无法获取数据，请稍微再试</string>
    <string name="empty_events">没有事件记录</string>

    <string-array name="module_status_array">
        <item>正常</item>
        <item>故障</item>
        <item>预警</item>
    </string-array>

    <!--节能建议-->
    <string-array name="energy_suggest_1" formatted="false">
        <item>不论安置何种型号的冰箱时，冰箱都应置于凉爽通风处，它的背面与墙之间都要留出空隙，这比起紧贴墙面来每天可以节能20%左右。</item>
        <item>空调功率要与住房面积相配，一般按每平方米200千卡计算，将空调安装在背阳的窗户上部。</item>
        <item>电视机不看时应拨掉电源插头，不要让电视处于待机状态。</item>
        <item>照明要充分利用反射与反光，例如给灯配上合适的反射罩可提高照度。</item>
        <item>短时间不用电脑，启用电脑的“待机”模式。</item>
    </string-array>

    <string-array name="energy_suggest_2" formatted="false">
        <item>电冰箱开门次数要少，开门动作要快，另外冰箱内的温度调节档应适中，不宜放置强冷，以免冰箱内制冷循环系统加大工作量而增加耗电量。</item>
        <item>使用空调器时，不宜温度太低，国家推荐家用空调夏季设置的温度为26至27度，空调每调高1度，可降低7%至10%的用电负荷。</item>
        <item>电视色彩、音量及亮度调至人感觉最佳状态，可以节电50%，也能延长电视机的使用寿命。另外，在开启电视机时，音量不宜过大。因为每增加1瓦音频功率，要增加3–4瓦电功耗。亮度高也比较费电。</item>
        <item>使用节能灯具也是节电的好方式</item>
        <item>电脑关机后，一定要将电源插头拔下。</item>
    </string-array>

    <string-array name="energy_suggest_3" formatted="false">
        <item>一般食物保鲜效果在8至10摄氏度最佳。贮存食物不宜过满，食品与箱体之间应留有10毫米以上的空隙，以利箱内冷空气对流。</item>
        <item>空调器不能频繁启动压缩机，停机后必须隔2至3分钟以后才能开机，否则易引起压缩机因超载而烧毁，且电耗多。</item>
        <item>尽量减少灯的开关次数。每开关一次，灯的使用寿命大约降低3小时左右。</item>
        <item>显示器的选择要适当，因为显示器越大，耗能越多。</item>
        <item>家用电熨斗通常有调温型和普通型。前者比较利于节约用电。普通型电熨斗也最好选择手柄上有开关的，可随时控制温度，降低电耗。</item>
    </string-array>

    <string-array name="energy_suggest_4" formatted="false">
        <item>存放热的食品，要待食品凉后再放入冰箱，分小块贮存，避免重复冷冻。鸡、鱼等挖去内脏，先冷藏后再冷冻，从而减少用电量。</item>
        <item>夏天用空调，如果是壁挂式，空调应该放高点，这样才利于空气对流，让室内的气温尽快降下来。</item>
        <item>保持灯泡、灯罩清洁，提高发光、反射效果。灯在使用一段时间以后，光通量就会大幅度下降，灯会越来越暗，这时要注意及时更换新灯。</item>
        <item>应根据不同衣料所需要的温度随时掌握电熨斗的通电时间。</item>
        <item>用电饭锅煮饭前，米最好浸泡30分钟左右，用温水或热水煮饭，这样可以节电30%。煮饭时，电饭锅上盖一条毛巾，可以减少热量散失。</item>
    </string-array>

    <string-array name="energy_suggest_5" formatted="false">
        <item>一般冰箱内蒸发器表面霜层达5毫米以上时就应除霜，如挂霜太厚会产生很大的热阻，耗电量会增多。要常保持冰箱背部清洁，因为冷凝器和压缩机的表面灰尘会影响散热效果。</item>
        <item>在使用空调的时候提前将房间的空气换好，如果需要开窗，窗户的缝隙不要超过两厘米。在使用空调的过程中，需要尽量控制开门开窗。如果您用的是变频空调，当室内温度总与外界一样时，那么变频空调还会调高频率，超负荷工作，增大消耗。如果想停机换空气，最好开窗开门前提前20分钟关空调。</item>
        <item>充分利用电熨斗的余热，也是节约用电的一个途径。如在熨烫毛料服装正面时，需要较高的温度，当熨烫反面时，则需要较低温度。</item>
        <item>电热盘是电饭锅的主要发热部件，所以保持电热盘清洁可以提高功效节省用电。每次用后要用干净软布擦净，焦膜可用木片、塑料片刮除。</item>
        <item>空调器面板上的过滤网应隔半月左右清扫一次。若积尘太多，应把它放在不超过45度的温水中清洗干净，吹干后按上。</item>
    </string-array>

    <string-array name="energy_suggest_6" formatted="false">
        <item>夏天，冰箱冷冻室的东西一般较少，这时可以用几个塑料盒或微波炉盒等容器盛满水后放入冷冻室，待水结成冰块后，将冰块转移到冷藏室，放在温控器的下面或旁边，这样当冷气朝上散发时，就会降低温控器周围的温度，从而减少温控器的启动次数，达到节电的目的。同时，冰块融化时会吸收大量的热量，这样对冷藏室内存放的食物也会起到降温保鲜的作用。</item>
        <item>选择适宜的出风角度：制冷时出风口向上，制热时出风口应该向下。</item>
        <item>微波炉节电，主要决定于加热食品的多少和干湿。加热食品时，应在被加热食品上加层保护膜，防止加热食品水分蒸发，不仅味道好，而且节省电能。</item>
        <item>配合电扇、遮阳帘使用。电扇的吹动力将使室内冷空气加速循环，冷气分布均匀，达到较佳的冷气效果。采用窗帘等遮阳，减少阳光辐射带来的室温影响也可以节省空调制冷用电。</item>
        <item>勿给外机穿“雨衣”，因为会影响散热，增加电耗。</item>
        <item>使用睡眠功能可以起到20%的节电效果。</item>
    </string-array>

    <string name="detail_current">电流：%s A</string>
    <string name="detail_current_mul">电流一：%s A\n电流二：%s A\n电流三：%s A</string>
    <string name="detail_voltage">电压：%s V</string>
    <string name="detail_voltage_mul">电压一：%s V\n电压二：%s V\n电压三：%s V</string>
    <string name="detail_power">功率：%s kW</string>
    <string name="detail_power_factor">功率因数：%s</string>
    <string name="detail_energy">能耗：%s kwh</string>

</resources>
