<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/home_bottom_panel"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    android:layout_alignParentBottom="true"
    android:paddingLeft="28dp"
    android:paddingRight="28dp">

    <TextView
        android:id="@+id/status_monitor"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:text="@string/label_module_monitor"
        android:textColor="#ffffff"
        android:textSize="16dp"
        tools:ignore="SpUsage" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/status_monitor"
        android:background="@drawable/shape_common_item_bg_ff_20"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/label_monitor_status"
            android:textColor="#ffffff"
            android:textSize="14dp" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="6dp"
            android:background="#55ffffff" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/label_monitor_error"
            android:textColor="#ffffff"
            android:textSize="14dp" />

    </LinearLayout>

</RelativeLayout>