<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="data"
            type="com.android.smartlink.ui.model.UIWeather" />

    </data>

    <RelativeLayout
        android:id="@+id/weather_root"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="124dp"
        android:baselineAligned="false"
        android:paddingBottom="14dp"
        android:paddingTop="2dp"
        tools:ignore="SpUsage">

        <!--aqi-->
        <LinearLayout
            android:id="@+id/api_group"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:contentDescription="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/air_aqi" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/weather_aqi"
                android:textColor="#ffffff"
                android:textSize="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{data.aqi}"
                android:textColor="#ffffff"
                android:textSize="12dp" />

        </LinearLayout>

        <!-- tomorrow weather-->
        <RelativeLayout
            android:id="@+id/tomorrow_group"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/home_status_detail_bg"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:id="@+id/anchor_view_2"
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:background="#33ffffff" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@id/anchor_view_2"
                android:layout_toStartOf="@id/anchor_view_2"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weather_tomorrow"
                    android:textColor="#ffffff"
                    android:textSize="12dp" />

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:contentDescription="@null"
                    android:scaleType="centerInside"
                    app:imageRes="@{data.tomorrowImage}" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{data.tomorrowMinMax}"
                    android:textColor="#ffffff"
                    android:textSize="12dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toEndOf="@id/anchor_view_2"
                android:layout_toRightOf="@id/anchor_view_2"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weather_after_tomorrow"
                    android:textColor="#ffffff"
                    android:textSize="12dp" />

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:contentDescription="@null"
                    android:scaleType="centerInside"
                    app:imageRes="@{data.dayAfterTomorrowImage}" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{data.afterTomorrowMinMax}"
                    android:textColor="#ffffff"
                    android:textSize="12dp" />

            </LinearLayout>

        </RelativeLayout>

        <!-- today weather-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@id/tomorrow_group"
            android:layout_toRightOf="@id/api_group"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="RtlHardcoded">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/weather_image"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:contentDescription="@null"
                    android:scaleType="centerInside"
                    app:imageRes="@{data.image}" />

                <TextView
                    android:id="@+id/weather_tmp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{data.tmp}"
                    android:textColor="#ffffff"
                    android:textSize="28dp"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{data.todayMinMax}"
                android:textColor="#ffffff"
                android:textSize="16dp" />

        </LinearLayout>

    </RelativeLayout>

</layout>